try fix autoreload filter_objects

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -18,6 +18,8 @@ get-pointings:
 # Filter Objects
 filter-objects:
     build: ./filter_objects
+    volumes:
+    - ./filter_objects:/app    
     environment:
       - DATABASE_URI
     ports:
