Setup Django, and create a Token authentication

--- a/core_admin/Dockerfile
+++ b/core_admin/Dockerfile
@@ -1,5 +1,12 @@
 FROM python:3.6
 
+MAINTAINER Glauber Costa Vila Verde <glauber.vila.verde@gmail.com>
+
+ENV GUNICORN_PORT=7001
+ENV GUNICORN_MODULE=coreAdmin.wsgi
+ENV GUNICORN_CALLABLE=application
+ENV APP_PATH=/app
+
 RUN mkdir /app
 
 WORKDIR /app
@@ -9,3 +16,6 @@ ADD requirements.txt /app
 RUN pip install -r requirements.txt
 
 COPY . /app
+
+WORKDIR $APP_PATH
+ENTRYPOINT $APP_PATH/entrypoint.sh
