Create tables in Django

--- a/core_admin/env.template
+++ b/core_admin/env.template
@@ -1,6 +1,7 @@
 
 # Database Settings for Django Backend "CoreAdmin"
 DB_NAME=<Database Name>
+DB_SCHEMA=<Database Schema>
 DB_USER=<Database User>
 DB_PASS=<Database Pass>
 DB_HOST=<Database Host>
