--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,17 +5,19 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chartist": "^0.10.1",
+    "classnames": "^2.2.5",
     "create-react-app": "^1.3.3",
-    "google-maps-react": "^1.1.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
-    "react": "^15.6.1",
+    "react": "^16.0.0",
     "react-bootstrap": "^0.31.1",
-    "react-bootstrap-table-next": "^0.1.6",
+    "react-bootstrap-table-next": "^0.1.8",
     "react-bootstrap-table2-overlay": "^0.1.1",
+    "react-bootstrap-table2-paginator": "^0.1.1",
     "react-chartist": "^0.13.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.0.0",
     "react-notification-system": "^0.2.15",
     "react-numeric-input": "^2.2.3",
     "react-router": "^4.1.2",
@@ -36,9 +38,7 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
