--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -23,7 +23,9 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "react-select": "^1.2.1"
+    "react-select": "^1.2.1",
+    "react-syntax-highlight": "^15.3.1",
+    "sql-formatter": "^2.3.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -38,8 +40,8 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-plugin-jsx-a11y": "5.0.1",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "5.0.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "prettier": "^1.11.1"
