--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,7 +1,7 @@
 {
   "name": "light-bootstrap-dashboard-react",
   "version": "1.1.0",
-  "homepage" : "http://webback14.linea.gov.br:8080",
+  "homepage": "http://webback14.linea.gov.br:8080",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
@@ -26,6 +26,7 @@
     "react-scripts": "1.0.10",
     "react-select": "^1.2.1",
     "react-syntax-highlight": "^15.3.1",
+    "serve": "^8.1.2",
     "sql-formatter": "^2.3.1"
   },
   "scripts": {
