--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -7,9 +7,8 @@ WORKDIR /src/app
 RUN yarn -v
 RUN yarn --ignore-optional
 
-#RUN echo "Build dashboard static files"
+
 RUN yarn run build
 
-#COPY . .
 
-#CMD ["yarn", "start"]
+ENTRYPOINT /src/app/entrypoint.sh
