--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,6 @@ services:
       - ./pg_data:/var/lib/postgresql/data
       - ./pg_backups:/pg_backups
       - ./database_subset:/data
-    # TODO acertar essas variaveis de ambiente
-    # environment:
-    #   - POSTGRES_USER=$DB_USER
-    #   - POSTGRES_PASSWORD=$DB_PASS
-    #   - POSTGRES_DB=$DB_NAME
     networks:
       - backend
 
@@ -55,11 +50,11 @@ services:
   # Dashboard
   dashboard:
     build: ./dashboard
-    volumes:
-      - ./dashboard:/src/app
+    # volumes:
+      # - ./dashboard:/src/app
     working_dir: /src/app
     ports:
-      - 7000:3000
+      - 7000:7000
     networks:
       - backend
     command: ./entrypoint.sh
