External directories have been configured #55

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,14 @@ services:
   # Core Admin (Backend Django)
   core-admin:
     build: ./core_admin
-    volumes:
-      - ./core_admin:/app
-      - ./log:/log
     env_file:
       - .env
+    volumes:
+      - ./core_admin:/app
+      - ${LOG_DIR}:/log
+      - ${ARCHIVE_DIR}:/archive
+      - ${PROCCESS_DIR}:/proccess
+      - ${CCD_IMAGES_DIR}:/ccd_images
     ports:
       - 7001:7001
     networks:
