--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ npm-debug.log
 .env
 
 .vscode
-
+.idea
 
 # Postgres data file in development
 /pg_data
@@ -27,3 +27,6 @@ npm-debug.log
 
 # Django static files for admin and restframework
 /core_admin/static
+
+# Develop Archive
+/archive
