--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,13 +21,16 @@
     "react-bootstrap-table2-paginator": "^0.1.1",
     "react-chartist": "^0.13.0",
     "react-dom": "^16.0.0",
+    "react-images": "^0.5.19",
     "react-interval": "^2.0.2",
+    "react-lightbox-component": "^1.2.1",
     "react-notification-system": "^0.2.15",
     "react-numeric-input": "^2.2.3",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
     "react-select": "^1.2.1",
+    "react-slideshow-image": "^0.2.2",
     "react-syntax-highlight": "^15.3.1",
     "serve": "^8.1.2",
     "sql-formatter": "^2.3.1"
