--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,8 @@
     "create-react-app": "^1.3.3",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "primeicons": "^1.0.0-beta.10",
+    "primereact": "^2.0.0-beta.1",
     "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
     "react": "^16.0.0",
@@ -19,7 +21,9 @@
     "react-bootstrap-table2-paginator": "^0.1.1",
     "react-chartist": "^0.13.0",
     "react-dom": "^16.0.0",
+    "react-images": "^0.5.19",
     "react-interval": "^2.0.2",
+    "react-lightbox-component": "^1.2.1",
     "react-notification-system": "^0.2.15",
     "react-numeric-input": "^2.2.3",
     "react-router": "^4.1.2",
