Alterações nas estatísticas da interface poitings #97

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "1.0.10",
     "react-select": "^1.2.1",
     "react-syntax-highlight": "^15.3.1",
+    "recharts": "^1.1.0",
     "serve": "^8.1.2",
     "sql-formatter": "^2.3.1"
   },
