--- a/dashboard/public/manifest.json
+++ b/dashboard/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo2.png",
       "sizes": "192x192",
       "type": "image/png"
     }
