--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,6 +8,7 @@
     "chartist": "^0.10.1",
     "classnames": "^2.2.5",
     "create-react-app": "^1.3.3",
+    "gulp": "^3.9.1",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "primeicons": "^1.0.0-beta.10",
@@ -31,6 +32,9 @@
     "react-scripts": "1.0.10",
     "react-select": "^1.2.1",
     "react-syntax-highlight": "^15.3.1",
+    "recharts": "^1.1.0",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.2",
     "serve": "^8.1.2",
     "sql-formatter": "^2.3.1"
   },
