--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.5",
     "create-react-app": "^1.3.3",
     "gulp": "^3.9.1",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "primeicons": "^1.0.0-beta.10",
@@ -31,6 +32,7 @@
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
     "react-select": "^1.2.1",
+    "react-sizeme": "^2.5.2",
     "react-syntax-highlight": "^15.3.1",
     "recharts": "^1.1.0",
     "semantic-ui-css": "^2.3.3",
