--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -8,9 +8,11 @@
     "classnames": "^2.2.5",
     "create-react-app": "^1.3.3",
     "gulp": "^3.9.1",
+    "line-reader": "^0.4.0",
     "moment": "^2.22.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "plotly.js": "^1.41.3",
     "primeicons": "^1.0.0-beta.10",
     "primereact": "^2.0.0-beta.1",
     "prop-types": "^15.6.1",
@@ -27,6 +29,7 @@
     "react-lightbox-component": "^1.2.1",
     "react-notification-system": "^0.2.15",
     "react-numeric-input": "^2.2.3",
+    "react-plotly.js": "^2.2.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
