--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,6 +9,7 @@
     "create-react-app": "^1.3.3",
     "gulp": "^3.9.1",
     "line-reader": "^0.4.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
