--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,6 +14,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "plotly.js": "^1.41.3",
+    "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0-beta.10",
     "primereact": "^2.0.0-beta.1",
     "prop-types": "^15.6.1",
