--- a/dashboard/public/manifest.json
+++ b/dashboard/public/manifest.json
@@ -2,11 +2,11 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
-    {
-      "src": "logo2.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
+    // {
+    //   "src": "logo2.png",
+    //   "sizes": "192x192",
+    //   "type": "image/png"
+    // }
   ],
   "start_url": "./index.html",
   "display": "standalone",
