--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -12,11 +12,13 @@ services:
       - ./pg_data:/var/lib/postgresql/data
       - ./pg_backups:/pg_backups
       - ./database_subset:/data
+    networks:
+      - backend
 
   # Core Admin (Backend Django)
-  backend:
+  core-admin:
     build: ./core_admin
-    image: tno-backend
+    image: tno-core-admin
     env_file:
       - .env
     volumes:
@@ -27,18 +29,20 @@ services:
       - ${CCD_IMAGES_DIR}:/ccd_images
     ports:
       - 7001:7001
+    networks:
+      - backend
     depends_on:
       - database
 
   # Dashboard
-  frontend:
+  dashboard:
     build: ./dashboard
-    image: tno-frontend
+    image: tno-dashboard
     working_dir: /src/app
     ports:
       - 7000:7000
-    env_file:
-      - .env      
+    networks:
+      - backend
     command: ./entrypoint.sh
 
   # NIMA
@@ -53,15 +57,7 @@ services:
     volumes:
       - ${PROCCESS_DIR}:/data
 
-  nginx:
-    build: ./nginx
-    ports:
-      - 80:8080
-    volumes:
-      - ./nginx/nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
-      # - ./frontend/build:/var/www/frontend
-    cap_drop:
-      - ALL
-    depends_on:
-      - frontend
-      - backend
+networks:
+  backend:
+# Baseado neste exemplo
+# https://github.com/zackferrofields/docker-nginx-react/blob/develop/docker-compose.yml
