--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -12,6 +12,10 @@ server {
     listen 8080;
 
     charset utf-8;
+    
+    # Increase max upload size 
+    client_max_body_size 400M;
+
 
     location /api/ {
         proxy_set_header Host $host;
