--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -27,6 +27,12 @@ server {
         proxy_http_version 1.1;
         proxy_buffering off;
         proxy_pass http://api;
+        
+        proxy_connect_timeout       600;
+        proxy_send_timeout          600;
+        proxy_read_timeout          600;
+        send_timeout                600;
+
     }
 
     # Admin
