Fixed bug in downloading orbit refinement in test environment.

--- a/nginx/nginx-proxy.conf
+++ b/nginx/nginx-proxy.conf
@@ -48,6 +48,10 @@ server {
         proxy_pass http://api$request_uri;
     }
 
+    location /media/ {
+        proxy_pass http://api$request_uri;
+    }
+
     # Rest Framework Web API 
     location /static/rest_framework/ {
         proxy_set_header Host $host;
