--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -7,6 +7,7 @@
     "chartist": "^0.10.1",
     "classnames": "^2.2.5",
     "create-react-app": "^1.3.3",
+    "formik": "^1.4.3",
     "gulp": "^3.9.1",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.11",
@@ -44,7 +45,8 @@
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
     "serve": "^8.1.2",
-    "sql-formatter": "^2.3.1"
+    "sql-formatter": "^2.3.1",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
