--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,8 +1,8 @@
 
-FROM node:8.3
+FROM node:8.3 as builder
 
-COPY . /src/app
-WORKDIR /src/app
+COPY . /app
+WORKDIR /app
 
 RUN yarn -v
 RUN yarn --ignore-optional
@@ -11,4 +11,18 @@ RUN yarn --ignore-optional
 RUN yarn run build
 
 
-ENTRYPOINT /src/app/entrypoint.sh
+# Ngnix
+FROM nginx:latest
+
+# Make /var/cache/nginx/ writable by non-root users
+RUN chgrp nginx /var/cache/nginx/
+RUN chmod -R g+w /var/cache/nginx/
+
+# Write the PID file to a location where regular users have write access.
+RUN sed --regexp-extended --in-place=.bak 's%^pid\s+/var/run/nginx.pid;%pid /var/tmp/nginx.pid;%' /etc/nginx/nginx.conf
+
+COPY --from=builder /app/build /var/www/frontend
+RUN chgrp nginx /var/www/frontend
+RUN chmod -R g+w /var/www/frontend
+ADD ./nginx/production.conf /etc/nginx/conf.d/default.conf
+USER nginx
