--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -52,7 +52,7 @@
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "REACT_APP_API=http://localhost/api PORT=7000 npm-run-all -p watch-css start-js",
+    "start": "PORT=7000 npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
