--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "1.0.10",
     "react-select": "^1.2.1",
     "react-sizeme": "^2.5.2",
+    "react-stepper-horizontal": "^1.0.11",
     "react-syntax-highlight": "^15.3.1",
     "recharts": "^1.1.0",
     "semantic-ui-css": "^2.3.3",
