Fixed condor log directory

--- a/core_admin/requirements.txt
+++ b/core_admin/requirements.txt
@@ -1,11 +1,11 @@
 gunicorn
 Django==2.0.3
-djangorestframework
-django-filter
-django-url-filter
-django-cors-headers
+djangorestframework==3.9.2
+django-filter==2.1.0
+django-url-filter==0.3.12
+django-cors-headers==2.5.2
 psycopg2-binary
-SQLAlchemy
+SQLAlchemy==1.3.2
 humanize
 parsl==0.5.2
 requests
