--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -30,6 +30,13 @@ services:
     depends_on:
       - database
 
+  # Praia Astrometry
+  praia_astrometry:
+    image: linea/tno_astrometry:latest
+    volumes:
+      - ${PROCCESS_DIR}:/data
+
+
   # NIMA
   nima:
     image: linea/nima:7
