--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,6 +6,7 @@
     "@fullcalendar/core": "^4.2.0",
     "@fullcalendar/daygrid": "^4.2.0",
     "@fullcalendar/interaction": "^4.2.0",
+    "@fullcalendar/react": "^4.2.0",
     "@fullcalendar/timegrid": "^4.2.0",
     "axios": "^0.18.0",
     "chartist": "^0.10.1",
