--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,6 +3,13 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/bootstrap": "^4.2.0",
+    "@fullcalendar/core": "^4.2.0",
+    "@fullcalendar/daygrid": "^4.2.0",
+    "@fullcalendar/interaction": "^4.2.0",
+    "@fullcalendar/list": "^4.2.0",
+    "@fullcalendar/react": "^4.2.0",
+    "@fullcalendar/timegrid": "^4.2.0",
     "axios": "^0.18.0",
     "chartist": "^0.10.1",
     "classnames": "^2.2.5",
