--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -57,6 +57,7 @@
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
     "serve": "^8.1.2",
+    "sfcookies": "^1.0.2",
     "sql-formatter": "^2.3.1",
     "yup": "^0.26.10"
   },
