--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@fullcalendar/bootstrap": "^4.2.0",
     "@fullcalendar/core": "^4.2.0",
     "@fullcalendar/daygrid": "^4.2.0",
@@ -54,6 +57,7 @@
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.2",
     "serve": "^8.1.2",
+    "sfcookies": "^1.0.2",
     "sql-formatter": "^2.3.1",
     "yup": "^0.26.10"
   },
