--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "^2.0.3",
+    "@devexpress/dx-react-grid": "^2.0.3",
+    "@devexpress/dx-react-grid-material-ui": "^2.0.3",
     "@fortawesome/fontawesome-free": "^5.10.1",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
