--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
+    "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-sizeme": "^2.6.7",
+    "recharts": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
