--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,7 @@
     "chartist": "^0.10.1",
     "classnames": "^2.2.5",
     "create-react-app": "^1.3.3",
+    "filesize": "^4.1.2",
     "formik": "^1.4.3",
     "gulp": "^3.9.1",
     "line-reader": "^0.4.0",
