--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,6 +20,7 @@
     "filesize": "^4.1.2",
     "formik": "^1.4.3",
     "gulp": "^3.9.1",
+    "json-formatter-js": "^2.2.1",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
