--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,10 @@
     "@devexpress/dx-react-grid": "^2.0.3",
     "@devexpress/dx-react-grid-material-ui": "^2.0.3",
     "@fortawesome/fontawesome-free": "^5.10.1",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/list": "^4.3.0",
+    "@fullcalendar/react": "^4.3.0",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
