--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free": "^5.10.1",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.6",
     "@material-ui/styles": "^4.3.3",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
