--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/react": "^4.3.0",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.28",
     "@material-ui/pickers": "^3.2.6",
     "@material-ui/styles": "^4.3.3",
     "axios": "^0.19.0",
