Changed skybot to use linea instance

--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -11,6 +11,10 @@ server {
     # Increase max upload size 
     client_max_body_size 400M;
 
+    gzip on;
+    gzip_comp_level  9;
+    gzip_min_length 128;
+    gzip_types text/plain application/javascript application/x-javascript text/javascript text/xml text/css text/html application/json  application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
     location /api/ {
         proxy_set_header Host $host;
