--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@devexpress/dx-react-core": "^2.0.3",
     "@devexpress/dx-react-grid": "^2.0.3",
     "@devexpress/dx-react-grid-material-ui": "^2.0.3",
@@ -19,7 +20,9 @@
     "@material-ui/styles": "^4.3.3",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "date-fns": "^2.0.0-beta.5",
     "history": "^4.9.0",
+    "i": "^0.3.6",
     "moment": "^2.24.0",
     "plotly.js": "^1.49.4",
     "prop-types": "^15.7.2",
