--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-sizeme": "^2.6.7",
-    "recharts": "^1.7.1"
+    "filesize": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
