--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "date-fns": "^2.0.0-beta.5",
+    "filesize": "^5.0.3",
     "history": "^4.9.0",
     "i": "^0.3.6",
     "moment": "^2.24.0",
@@ -36,7 +37,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-sizeme": "^2.6.7",
-    "filesize": "^5.0.3"
+    "react-syntax-highlight": "^15.3.1",
+    "sql-formatter": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
