--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "filesize": "^5.0.3",
     "history": "^4.9.0",
     "i": "^0.3.6",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "plotly.js": "^1.49.4",
     "prop-types": "^15.7.2",
