--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "plotly.js": "^1.49.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-date-picker": "^7.8.2",
     "react-dom": "^16.9.0",
     "react-images": "^1.0.0",
     "react-interval": "^2.1.0",
