--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
 NODE_PATH=./src
-REACT_APP_API=/api
+REACT_APP_API=http://tno-testing.linea.gov.br/api
+REACT_APP_INST_LOGIN=http://gidlabdemo.linea.gov.br:82/Shibboleth.sso/Login
