--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
 NODE_PATH=./src
 #REACT_APP_API=http://localhost/api
 REACT_APP_API=http://tno-testing.linea.gov.br/api
-REACT_APP_INST_LOGIN=http://gidlabdemo.linea.gov.br:82/Shibboleth.sso/Login
+REACT_APP_INST_LOGIN=http://gidlabdemo.linea.gov.br/Shibboleth.sso/Login
