The authentication method was changed from being a token to SessionAuthentication. login and logout are now on the backend. configuration variables have been added to enable or disable institutional login. redirects have been configured.

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
-NODE_PATH=./src
-#REACT_APP_API=http://localhost/api
-REACT_APP_API=http://tno-testing.linea.gov.br/api
-REACT_APP_INST_LOGIN=http://gidlabdemo.linea.gov.br/Shibboleth.sso/Login
+# NODE_PATH=./src
+REACT_APP_API=http://localhost/api
+# REACT_APP_API=http://tno-testing.linea.gov.br/api
+# REACT_APP_INST_LOGIN=http://gidlabdemo.linea.gov.br/Shibboleth.sso/Login
