--- a/core_admin/requirements.txt
+++ b/core_admin/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.9.2
 django-filter==2.1.0
 django-url-filter==0.3.12
 django-cors-headers==2.5.2
+django-settings-export==1.2.1
 psycopg2-binary
 SQLAlchemy==1.3.2
 humanize
