--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -16,13 +16,19 @@ server {
     gzip_min_length 128;
     gzip_types text/plain application/javascript application/x-javascript text/javascript text/xml text/css text/html application/json  application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
+
     location /api/ {
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Methods 'GET, POST, PUT, PATCH, POST, DELETE, OPTIONS';
+        add_header Access-Control-Allow-Headers 'X-CSRFToken, accept, accept-encoding, authorization, content-type, dnt, origin, user-agent, x-csrftoken, x-requested-with';
+       
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        proxy_set_header Cookie $http_cookie;
         proxy_http_version 1.1;
         proxy_buffering off;
         proxy_pass http://api;
