A function has been implemented that allows the Download of DES CCDs. the download occurs when the astrometry step tries to use a download and it does not exist.

--- a/core_admin/Dockerfile
+++ b/core_admin/Dockerfile
@@ -9,11 +9,12 @@ ENV APP_PATH=/app
 
 #RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN apt-get update && apt-get install -y  \
-                vim \
-                expect \
-                telnet \
-                ftp \
-            && rm -rf /var/lib/apt/lists/*
+    vim \
+    expect \
+    telnet \
+    ftp \
+    libcfitsio-bin \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir $APP_PATH
 
