--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -3,10 +3,11 @@ services:
   # Database
   database:
     image: linea/postgresql_q3c:latest
-    restart: always
     env_file:
       - .env
     expose:
+      # Deixar a porta exposta para desenvolvimento
+      # isto permite acessar o banco de dados a partir de outros apps como o DBeaver
       - 5432
     volumes:
       - ./pg_data:/var/lib/postgresql/data
@@ -16,7 +17,6 @@ services:
   # Core Admin (Backend Django)
   backend:
     build: ./core_admin
-    image: tno-backend
     env_file:
       - .env
     volumes:
@@ -25,17 +25,38 @@ services:
       - ${ARCHIVE_DIR}:/archive
       - ${PROCCESS_DIR}:/proccess
       - ${CCD_IMAGES_DIR}:/ccd_images
-    ports:
-      - 7001:7001
     depends_on:
       - database
 
-  # Praia Astrometry
+  frontend:
+    image: node:8.10
+    working_dir: /app
+    volumes: 
+      - ./frontend:/app
+    command: yarn start
+
+  # Servidor Web NGINX
+  nginx:
+    build: ./frontend
+    ports:
+      - 80:8080
+    volumes:
+      - ./nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
+    cap_drop:
+      - ALL
+    depends_on:
+      - backend
+      - frontend
+
+# -------- Pipelines -----------
+# Estao aqui apenas para garantir que as imagens vão ser baixadas
+# antes da aplicação tentar executar. 
+
+# Praia Astrometry
   praia_astrometry:
     image: linea/tno_astrometry:latest
     volumes:
       - ${PROCCESS_DIR}:/data
-
 
   # NIMA
   nima:
@@ -49,14 +70,6 @@ services:
     volumes:
       - ${PROCCESS_DIR}:/data
 
-  # Servidor Web NGINX
-  frontend:
-    build: ./dashboard
-    ports:
-      - 80:8080
-    volumes:
-      - ./dashboard/nginx/development.conf:/etc/nginx/conf.d/default.conf:ro
-    cap_drop:
-      - ALL
-    depends_on:
-      - backend
+
+
+
