--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.0.4",
     "date-fns": "^2.0.0-beta.5",
     "filesize": "^5.0.3",
+    "highlight.js": "^10.0.1",
     "history": "^4.9.0",
     "i": "^0.3.6",
     "lodash": "^4.17.15",
