--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -29,7 +29,7 @@ services:
       - ${ARCHIVE_DIR}:/archive
       - ${PROCCESS_DIR}:/proccess
       - ${CCD_IMAGES_DIR}:/ccd_images
-      # - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       - database
 
