--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -3,6 +3,11 @@ upstream api {
     server backend:7001;
 }
 
+upstream front {
+    ip_hash;
+    server frontend:3000;
+}
+
 server {
     listen 8080;
 
@@ -31,7 +36,7 @@ server {
         proxy_set_header Cookie $http_cookie;
         proxy_http_version 1.1;
         proxy_buffering off;
-        proxy_pass http://api;
+        proxy_pass $scheme://api;
         
         proxy_connect_timeout       600;
         proxy_send_timeout          600;
@@ -42,7 +47,7 @@ server {
 
     # Admin
     location /admin/ {
-      proxy_pass http://api$request_uri;
+      proxy_pass $scheme://api$request_uri;
       proxy_set_header Host $host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Host $server_name;
@@ -50,11 +55,11 @@ server {
     }
 
     location /static/admin/ {
-        proxy_pass http://api$request_uri;
+        proxy_pass $scheme://api$request_uri;
     }
 
     location /media/ {
-        proxy_pass http://api$request_uri;
+        proxy_pass $scheme://api$request_uri;
     }
 
     # Rest Framework Web API 
@@ -67,7 +72,15 @@ server {
         proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
         proxy_buffering off;
-        proxy_pass http://api$request_uri;
+        proxy_pass $scheme://api$request_uri;
+    }
+
+    # Frontend
+    location / {
+      proxy_pass $scheme://front$request_uri;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
+      proxy_set_header X-Real-IP $remote_addr;
     }
 }
-
