--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,14 @@
     "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/list": "^4.3.0",
     "@fullcalendar/react": "^4.3.0",
-    "@material-ui/core": "^4.9.3",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
-    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/pickers": "^4.0.0-alpha.7",
     "@material-ui/styles": "^4.3.3",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "d3": "^5.16.0",
     "date-fns": "^2.0.0-beta.5",
     "filesize": "^5.0.3",
     "highlight.js": "^10.0.1",
@@ -27,9 +28,11 @@
     "i": "^0.3.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "npm": "^6.14.5",
     "plotly.js": "^1.49.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-date-range": "^1.0.3",
     "react-dom": "^16.9.0",
     "react-images": "^1.0.0",
     "react-lazyload": "^2.6.2",
