--- a/core_admin/requirements.txt
+++ b/core_admin/requirements.txt
@@ -1,4 +1,3 @@
-gunicorn
 Django==2.0.12
 djangorestframework==3.9.2
 django-filter==2.1.0
@@ -20,3 +19,5 @@ numpy==1.17.0
 apscheduler
 pyAesCrypt==0.4.3
 pyopenssl==19.1.0
+django-shibboleth-remoteuser==0.12
+uWSGI==2.0.18
