--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -22,56 +22,32 @@ server {
     gzip_types text/plain application/javascript application/x-javascript text/javascript text/xml text/css text/html application/json  application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
 
-    location /api/ {
-        add_header Access-Control-Allow-Origin $http_origin always;
-        add_header Access-Control-Allow-Methods 'GET, POST, PUT, PATCH, POST, DELETE, OPTIONS';
-        add_header Access-Control-Allow-Headers 'X-CSRFToken, accept, accept-encoding, authorization, content-type, dnt, origin, user-agent, x-csrftoken, x-requested-with';
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $server_name;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Cookie $http_cookie;
-        proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_pass $scheme://api;
-        proxy_connect_timeout       600;
-        proxy_send_timeout          600;
-        proxy_read_timeout          600;
-        send_timeout                600;
-
-    }
-
-    # Admin
-    location /admin/ {
-        proxy_pass $scheme://api$request_uri;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $server_name;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /static/admin/ {
-        proxy_pass $scheme://api$request_uri;
-    }
-
-    location /media/ {
-        proxy_pass $scheme://api$request_uri;
-    }
-
     # Rest Framework Web API
-    location /static/rest_framework/ {
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $server_name;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_pass $scheme://api$request_uri;
+    location /api/ {
+        include uwsgi_params;
+        uwsgi_pass api;
+    }
+
+    location /django_static/rest_framework {
+        include uwsgi_params;
+        uwsgi_pass api;
+    }
+
+    # Django Admin
+    location /admin/ {
+        include uwsgi_params;
+        uwsgi_pass api;
+    }
+
+    location /django_static/admin {
+        include uwsgi_params;
+        uwsgi_pass api;
+    }
+
+    # Django Media
+    location /media/ {
+        include uwsgi_params;
+        uwsgi_pass api;
     }
 
     # Frontend
