LDAP Authentication and validation meeting requests

--- a/core_admin/Dockerfile
+++ b/core_admin/Dockerfile
@@ -16,6 +16,9 @@ RUN apt-get update && apt-get install -y  \
     libcfitsio-bin \
     && rm -rf /var/lib/apt/lists/*
 
+# Install python-ldap dependencies
+RUN apt-get update && apt-get install libsasl2-dev libldap2-dev libssl-dev -y
+
 RUN mkdir $APP_PATH
 
 WORKDIR $APP_PATH
