--- a/core_admin/Dockerfile
+++ b/core_admin/Dockerfile
@@ -9,6 +9,9 @@ ENV APP_PATH=/app
 
 #RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN apt-get update && apt-get install -y  \
+    python-dev \
+    libaio-dev \
+    build-essential \
     vim \
     expect \
     telnet \
