--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,11 +36,13 @@
     "react-dom": "^16.9.0",
     "react-images": "^1.0.0",
     "react-lazyload": "^2.6.2",
+    "react-particles-js": "^3.4.0",
     "react-plotly.js": "^2.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-sizeme": "^2.6.7",
     "react-syntax-highlight": "^15.3.1",
+    "react-youtube": "^7.13.0",
     "sql-formatter": "^2.3.3"
   },
   "scripts": {
