--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -81,6 +81,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";        
+    }
+
+    # /Data Diretorio que aponta para /archive
+    location /data/ {
+        alias /var/www/data/;
+        try_files $uri $uri/ /index.html;
+        autoindex off;
     }
 
 }
