--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "plotly.js": "^1.49.4",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-date-range": "^1.0.3",
+    "react-date-range": "^1.2.0",
     "react-dom": "^16.9.0",
     "react-images": "^1.0.0",
     "react-lazyload": "^2.6.2",
@@ -42,8 +42,7 @@
     "react-scripts": "3.1.1",
     "react-sizeme": "^2.6.7",
     "react-syntax-highlight": "^15.3.1",
-    "react-youtube": "^7.13.0",
-    "sql-formatter": "^2.3.3"
+    "react-youtube": "^7.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
