--- a/core_admin/requirements.txt
+++ b/core_admin/requirements.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.12
 APScheduler==3.7.0
+astropy==4.1
 async-generator==1.10
 attrs==20.3.0
 Babel==2.9.0
@@ -56,7 +57,7 @@ nbconvert==6.0.7
 nbformat==5.1.3
 nbsphinx==0.8.2
 nest-asyncio==1.5.1
-numpy==1.17.0
+numpy==1.19.5
 packaging==20.9
 pandas==1.1.5
 pandocfilters==1.4.3
@@ -85,6 +86,7 @@ pytimeparse==1.1.8
 pytz==2021.1
 pyzmq==22.0.3
 requests==2.25.1
+scipy==1.5.4
 six==1.15.0
 snowballstemmer==2.1.0
 soupsieve==2.2.1
@@ -95,6 +97,7 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+spiceypy==4.0.1
 SQLAlchemy==1.3.2
 sqlparse==0.4.1
 tblib==1.7.0
@@ -109,4 +112,3 @@ wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==0.58.0
 zipp==3.4.1
-spiceypy==4.0.1
