--- a/core_admin/Dockerfile
+++ b/core_admin/Dockerfile
@@ -1,38 +1,48 @@
-FROM python:3.6
+FROM python:3.7 as base
 
-MAINTAINER Glauber Costa Vila Verde <glauber.vila.verde@gmail.com>
+# Exemplo: https://sourcery.ai/blog/python-docker/
 
-ENV GUNICORN_PORT=7001
-ENV GUNICORN_MODULE=coreAdmin.wsgi
-ENV GUNICORN_CALLABLE=application
-ENV APP_PATH=/app
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONFAULTHANDLER 1
 
-#RUN apt-get update && apt-get install -y --no-install-recommends \
-RUN apt-get update && apt-get install -y  \
+# Install compilation dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
     python-dev \
+    python3-dev \
     libaio-dev \
     build-essential \
-    vim \
-    expect \
-    telnet \
-    ftp \
     libcfitsio-bin \
+    libsasl2-dev \
+    libldap2-dev \
+    libssl-dev \
+    vim \    
     && rm -rf /var/lib/apt/lists/*
 
-# Install python-ldap dependencies
-RUN apt-get update && apt-get install libsasl2-dev libldap2-dev libssl-dev -y
+FROM base AS python-deps
+# Install pipenv 
+RUN pip install pipenv
 
-RUN mkdir $APP_PATH
+# Install python dependencies in /.venv
+COPY Pipfile .
+COPY Pipfile.lock .
 
-WORKDIR $APP_PATH
+RUN PIPENV_VENV_IN_PROJECT=1 pipenv install --deploy
 
-ADD requirements.txt $APP_PATH
+# # Gerar um arquivo requirements
+# RUN pipenv lock -r > requirements.txt
 
-RUN pip install --upgrade pip
+FROM base AS runtime
+# Copy virtual env from python-deps stage
+COPY --from=python-deps /.venv /.venv
+ENV PATH="/.venv/bin:$PATH"
 
-RUN pip install -r requirements.txt
+# Create and switch to a new user
+RUN useradd --create-home appuser
+WORKDIR /home/appuser
+USER appuser
+COPY . .
 
-COPY . $APP_PATH
-
-WORKDIR $APP_PATH
-ENTRYPOINT $APP_PATH/entrypoint.sh
+ENTRYPOINT ./entrypoint.sh
