--- a/core_admin/requirements.txt
+++ b/core_admin/requirements.txt
@@ -5,7 +5,7 @@ django-filter==2.1.0
 django-url-filter==0.3.12
 django-cors-headers==2.5.2
 django-settings-export==1.2.1
-psycopg2-binary
+psycopg2-binary==2.8.6
 SQLAlchemy==1.3.2
 humanize
 parsl==0.5.2
@@ -21,4 +21,6 @@ apscheduler
 pyAesCrypt==0.4.3
 pyopenssl
 python-ldap==3.2.0
-django-auth-ldap==2.1.1
+django-auth-ldap==2.2.0
+spiceypy==4.0.0
+astropy==4.1
