Instaled and configured uWSGI. Removed parsl library and dependencies. improve settings. updated docker-compose and ngnix-conf templates

--- a/core_admin/requirements.txt
+++ b/core_admin/requirements.txt
@@ -1,18 +1,42 @@
+APScheduler==3.9.1.post1
+astropy==5.1.1
+cached-property==1.5.2
+certifi==2022.9.24
+charset-normalizer==2.1.1
+contourpy==1.0.6
+cycler==0.11.0
 Django==2.2.13
 django-cors-headers==2.5.2
 django-filter==2.1.0
 django-settings-export==1.2.1
+django-shibboleth-remoteuser==0.12
 django-url-filter==0.3.12
 djangorestframework==3.9.2
+enum-compat==0.0.3
+fonttools==4.38.0
+humanize==4.4.0
+idna==3.4
+kiwisolver==1.4.4
+lxml==4.9.1
+matplotlib==3.6.2
+numpy==1.23.4
+packaging==21.3
+pandas==1.5.1
+Pillow==9.3.0
 psycopg2-binary==2.8.6
+pyerfa==2.0.0.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+requests==2.28.1
+scipy==1.9.3
+six==1.16.0
+spiceypy==5.1.2
 SQLAlchemy==1.3.2
-lxml
-requests
-humanize
-APScheduler
-astropy
-numpy
-matplotlib
-pandas
-scipy
-spiceypy
+sqlparse==0.4.3
+tzdata==2022.6
+tzlocal==4.2
+urllib3==1.26.12
+uWSGI==2.0.20
