--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ npm-debug.log
 /core_admin/static
 
 # Django Local Settings
-core_admin/coreAdmin/local_vars.py
-local_vars.py
+core_admin/coreAdmin/local_settings.py
+local_settings.py
 
 # Develop Archive
 /archive
