--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -1,17 +1,14 @@
 version: "3.6"
-
 services:
   # Database
   database:
     image: linea/postgresql_q3c:latest
     env_file:
       - .env
-
     expose:
       # Deixar a porta exposta para desenvolvimento
       # isto permite acessar o banco de dados a partir de outros apps como o DBeaver
       - 5432
-
     volumes:
       - ./pg_data:/var/lib/postgresql/data
       - ./pg_backups:/pg_backups
@@ -19,62 +16,54 @@ services:
 
   # Core Admin (Backend Django)
   backend:
+    user: "1000:1000"
     build: ./core_admin
-    env_file:
-      - .env
-
+    # image: linea/tno:backend_36b1691
     volumes:
       - ./core_admin:/app
-      - ${LOG_DIR}:/log
-      - ${ARCHIVE_DIR}:/archive
-      - ${PROCCESS_DIR}:/proccess
-      - ${CCD_IMAGES_DIR}:/ccd_images
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./local_vars.py:/app/coreAdmin/local_vars.py
+      - ./log:/log
+      - ./archive:/archive
+      - ./archive/proccess:/proccess
+      - ./archive/ccd_images:/ccd_images
     depends_on:
       - database
 
-  # Frontend React
   frontend:
     image: node:12.16.2
     working_dir: /app
     volumes:
       - ./frontend:/app
+      - ./frontend/node_modules:/app/node_modules
+    stdin_open: true
     command: yarn start
+
+  # jupyter:
+  #   image: jupyter/scipy-notebook:latest
+  #   command: "start-notebook.sh"
+  #   environment:
+  #     NB_USER: docker_worker
+  #     CHOWN_HOME: 'yes'
+  #     CHOWN_HOME_OPTS: -R
+  #     JUPYTER_ENABLE_LAB: 'yes'
+  #   volumes:
+  #     - ./archive/jupyter:/home/jovyan/work
+  #   ports:
+  #     - 8888:8888
+  #   links:
+  #     - database      
 
   # Servidor Web NGINX
   nginx:
-    build: ./frontend
+    image: nginx:latest
+    # build: ./frontend
     ports:
       - 80:8080
     volumes:
-      - ./nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
-    cap_drop:
-      - ALL
+      # Arquivo de configuração do Ngnix para este ambiente.
+      - ./nginx-proxy-development.conf:/etc/nginx/conf.d/default.conf:ro
+      # Diretório onde o backend manipula arquivos, e que deve ficar acessivel ao servidor web.
+      - ./archive:/var/www/data
     depends_on:
       - backend
       - frontend
-
-​
-
-# -------- Pipelines -----------
-
-# Estao aqui apenas para garantir que as imagens vão ser baixadas
-# antes da aplicação tentar executar.
-
-# Praia Astrometry
-  praia_astrometry:
-    image: linea/tno_astrometry:v1.1.2
-    volumes:
-      - ${PROCCESS_DIR}:/data
-
-  # NIMA
-  nima:
-    image: linea/nima:7
-    volumes:
-      - ${PROCCESS_DIR}:/data
-​
-  # Praia Occultation
-  praia_occ:
-    image: linea/praiaoccultation:v1.0.1
-    volumes:
-      - ${PROCCESS_DIR}:/data
