Added new endpoint for produce des observations plot. Changed Dockerfile. Added new python dependencies. Remove foreign key ccd in des observations table

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
-FROM python:3.10-slim as builder
+FROM python:3.10-slim
 
-WORKDIR /app
+# WORKDIR /app
 
 # If this is set to a non-empty string, Python won’t try
 # to write .pyc files on the import of source modules
@@ -30,19 +30,43 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/*
 
 # Add venv
-RUN python -m venv /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
+# RUN python -m venv /opt/venv
+# ENV PATH="/opt/venv/bin:$PATH"
 
 # Install python packages
-COPY requirements.txt .
-RUN pip install --upgrade pip wheel  && \
-    pip install --disable-pip-version-check --no-cache-dir -r requirements.txt
+COPY requirements.txt /tmp/pip-tmp/
+RUN pip --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
+    && rm -rf /tmp/pip-tmp
+
+
+ARG USERNAME=tnouser
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+# add user so we can run things as non-root
+# https://code.visualstudio.com/remote/advancedcontainers/add-nonroot-user
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
+    && mkdir /usr/src/app /usr/src/app/django_static /archive /log \
+    && chown -R $USER_UID:$USER_GID /usr/src/app /usr/src/app/django_static /archive /log
+
+ENV PYTHONPATH="/usr/src/app:$PYTHONPATH"
+
+WORKDIR /usr/src/app
+COPY . /usr/src/app
+
+COPY ./entrypoint.sh ./entrypoint.sh
+
+# Switch to non-priviliged user and run app
+USER tnouser
+
+ENTRYPOINT ["./entrypoint.sh"]
 
 #  Runtime Stage
-FROM python:3.10-slim
+# FROM python:3.10-slim
 
 # Copy Dependencies for Python LDAP, Psql
-COPY --from=builder /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu
+# COPY --from=builder /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu
 
 # # Criar o grupo des-brazil com o mesmo id usado no linea
 # RUN groupadd --gid 10000 des-brazil
@@ -50,25 +74,25 @@ COPY --from=builder /usr/lib/x86_64-linux-gnu /usr/lib/x86_64-linux-gnu
 # RUN adduser --system tnouser --gid 10000
 
 # add user so we can run things as non-root
-RUN adduser --system tnouser 
+# RUN adduser --system tnouser 
 
-# Copy from builder and set ENV for venv
-COPY --from=builder /opt/venv /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
+# # Copy from builder and set ENV for venv
+# COPY --from=builder /opt/venv /opt/venv
+# ENV PATH="/opt/venv/bin:$PATH"
 
-# Set Python ENV
-ENV PYTHONUNBUFFERED=1 
-ENV PYTHONPATH="/app:$PYTHONPATH"
-# Matplotlib Config 
-ENV MPLCONFIGDIR="/tmp"
+# # Set Python ENV
+# ENV PYTHONUNBUFFERED=1 
+# ENV PYTHONPATH="/app:$PYTHONPATH"
+# # Matplotlib Config 
+# ENV MPLCONFIGDIR="/tmp"
 
-ENV SHELL /bin/bash
+# ENV SHELL /bin/bash
 
-# Copy app files into container
-WORKDIR /app
-COPY . .
+# # Copy app files into container
+# WORKDIR /app
+# COPY . .
 
-# Switch to non-priviliged user and run app
-USER tnouser
-# CMD ["/app/entrypoint.sh"]
-ENTRYPOINT ./entrypoint.sh
+# # Switch to non-priviliged user and run app
+# USER tnouser
+# # CMD ["/app/entrypoint.sh"]
+# ENTRYPOINT ./entrypoint.sh
