--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,14 @@
 APScheduler==3.9.1.post1
 asgiref==3.5.2
 astropy==5.1.1
+astroquery==0.4.6
+beautifulsoup4==4.12.1
 cached-property==1.5.2
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
 contourpy==1.0.6
+cryptography==40.0.1
 cycler==0.11.0
 Django==3.2.18
 django-cors-headers==3.11.0
@@ -16,29 +20,44 @@ djangorestframework==3.14.0
 enum-compat==0.0.3
 fonttools==4.38.0
 greenlet==2.0.1
+html5lib==1.1
 humanize==4.4.0
 idna==3.4
+importlib-metadata==6.1.0
+jaraco.classes==3.2.3
+jeepney==0.8.0
+kaleido==0.2.1
+keyring==23.13.1
 kiwisolver==1.4.4
 lxml==4.9.1
 matplotlib==3.6.2
+more-itertools==9.1.0
 numpy==1.23.4
 packaging==21.3
 pandas==1.5.1
 Pillow==9.3.0
+plotly==5.14.1
 psycopg2-binary==2.9.5
+pycparser==2.21
 pyerfa==2.0.0.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.6
 pytz-deprecation-shim==0.1.0.post0
+pyvo==1.4.1
 PyYAML==6.0
 requests==2.28.1
 scipy==1.9.3
+SecretStorage==3.3.3
 six==1.16.0
+soupsieve==2.4
 spiceypy==5.1.2
 SQLAlchemy==1.4.44
 sqlparse==0.4.3
+tenacity==8.2.2
 tzdata==2022.6
 tzlocal==4.2
 urllib3==1.26.12
 uWSGI==2.0.21
+webencodings==0.5.1
+zipp==3.15.0
