Foi removido arquivos de instalação do docker .deb e .sh. acredito que foram adicionados por engano. Foi corrigido o arquivo de template do docker-compose de desenvolvimento, para corrigir o path atual da aplicação dentro do container.

--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -22,9 +22,9 @@ services:
     build: ./backend
     volumes:
       # Diretório de Código fonte da aplicação
-      - ./backend:/app
+      - ./backend:/usr/src/app
       # Arquivo de Variaveis de ambiente
-      - ./local_settings.py:/app/coreAdmin/local_settings.py
+      - ./local_settings.py:/usr/src/app/coreAdmin/local_settings.py
       # Diretório de Logs
       - ./log:/log
       # Diretório de Dados
