--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,24 @@
+amqp==5.1.1
 APScheduler==3.9.1.post1
 asgiref==3.5.2
 astropy==5.1.1
 astroquery==0.4.6
 beautifulsoup4==4.12.1
+billiard==3.6.4.0
 cached-property==1.5.2
+celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 contourpy==1.0.6
 cryptography==40.0.1
 cycler==0.11.0
 Django==3.2.18
+django-celery-results==2.5.1
 django-cors-headers==3.11.0
 django-filter==21.1
 django-settings-export==1.2.1
@@ -18,6 +26,7 @@ django-shibboleth-remoteuser==0.12
 django-url-filter==0.3.15
 djangorestframework==3.14.0
 enum-compat==0.0.3
+flower==1.2.0
 fonttools==4.38.0
 greenlet==2.0.1
 html5lib==1.1
@@ -29,6 +38,7 @@ jeepney==0.8.0
 kaleido==0.2.1
 keyring==23.13.1
 kiwisolver==1.4.4
+kombu==5.2.4
 lxml==4.9.1
 matplotlib==3.6.2
 more-itertools==9.1.0
@@ -37,6 +47,8 @@ packaging==21.3
 pandas==1.5.1
 Pillow==9.3.0
 plotly==5.14.1
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
 psycopg2-binary==2.9.5
 pycparser==2.21
 pyerfa==2.0.0.1
@@ -55,9 +67,12 @@ spiceypy==5.1.2
 SQLAlchemy==1.4.44
 sqlparse==0.4.3
 tenacity==8.2.2
+tornado==6.3.2
 tzdata==2022.6
 tzlocal==4.2
 urllib3==1.26.12
 uWSGI==2.0.21
+vine==5.0.0
+wcwidth==0.2.6
 webencodings==0.5.1
 zipp==3.15.0
