--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,14 +15,17 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 contourpy==1.0.6
+cron-descriptor==1.4.0
 cryptography==40.0.1
 cycler==0.11.0
 Django==3.2.18
+django-celery-beat==2.5.0
 django-celery-results==2.5.1
 django-cors-headers==3.11.0
 django-filter==21.1
 django-settings-export==1.2.1
 django-shibboleth-remoteuser==0.12
+django-timezone-field==5.0
 django-url-filter==0.3.15
 djangorestframework==3.14.0
 enum-compat==0.0.3
@@ -53,6 +56,7 @@ psycopg2-binary==2.9.5
 pycparser==2.21
 pyerfa==2.0.0.1
 pyparsing==3.0.9
+python-crontab==2.7.1
 python-dateutil==2.8.2
 pytz==2022.6
 pytz-deprecation-shim==0.1.0.post0
