--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -6,6 +6,10 @@ upstream tnofrontend {
     server frontend:3000;
 }
 
+upstream tnosora{
+    server sora:8000;
+}
+
 server {
     listen 8080;
 
@@ -50,6 +54,20 @@ server {
         uwsgi_pass tnoapi;
         uwsgi_read_timeout 120s;
         uwsgi_send_timeout 120s;
+    }
+
+    location /sora {
+        rewrite /sora/(.*) /$1 break;
+        proxy_pass $scheme://tnosora;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header Host $host;       
+
+        # live reload
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Admin
