imagem docker sora

--- a/docker-compose-development-template.yml
+++ b/docker-compose-development-template.yml
@@ -56,6 +56,21 @@ services:
       - WDS_SOCKET_PORT=0
     command: yarn start
 
+  sora:
+    image: mozaru/carto-sora
+    #user: "1000:1000"
+    environment:
+      INPUT_PATH: "/media/input"
+      OUTPUT_PATH: "/media/output"
+      CACHE_PATH: "/media/output"
+      PORT: 8000
+    ports: 
+      - 1234:8000
+    volumes:
+      - ./archive/sora/input:/media/input
+      - ./archive/sora/output:/media/output
+    command: python3.7 /opt/server/main.py
+
   # jupyter:
   #   image: jupyter/scipy-notebook:latest
   #   command: "start-notebook.sh"
