--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,4 @@
 # NODE_PATH=./src
 REACT_APP_API=/api
+REACT_APP_SORA=/sora
 # REACT_APP_INST_LOGIN=http://gidlabdemo.linea.org.br/Shibboleth.sso/Login
