--- a/nginx-proxy-development.conf
+++ b/nginx-proxy-development.conf
@@ -56,20 +56,6 @@ server {
         uwsgi_send_timeout 120s;
     }
 
-    location /sora {
-        rewrite /sora/(.*) /$1 break;
-        proxy_pass $scheme://tnosora;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Real-IP  $remote_addr;
-        proxy_set_header Host $host;       
-
-        # live reload
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
-    }
-
     # Admin
     location /admin {
         include uwsgi_params;
@@ -90,6 +76,21 @@ server {
         alias /var/www/data/;
         try_files $uri $uri/ /index.html;
         autoindex off;
+    }
+
+    # Serviço SORA para geracao de mapas de predicao.
+    location /sora {
+        rewrite /sora/(.*) /$1 break;
+        proxy_pass $scheme://tnosora;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header Host $host;       
+
+        # live reload
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_cache_bypass $http_upgrade;
     }
 
 }
